# energy-calculator

./: .gitignore  README.rst  pyproject.toml
data/: test_holiday.csv  test_weekday.csv  test_weekend.csv
energy_calculator/: main.py  tariffs_data.py  utils.py
tests/: test_energy_calculator.py
